--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <header>
         <h1 class="header">Zhaog.github.com</h1>
         <p class="header">zhaog blog</p>
-
+         <a href="one.html">µÚÒ»Æª²©¿Í</a>
 
 
         <ul>
