--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
       <header>
         <h1 class="header">Zhaog.github.com</h1>
         <p class="header">zhaog blog</p>
-         <a href="one.html">first blog</a>
+         <a href="one.html">blog1</a>
+	 <a href="second.html">blog2</a>
 
 
         <ul>
